colums auto-fill

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -62,33 +62,39 @@
 
         <li class="photo-item hiddenHd">
           <span class="photo__list-one-1 img">
+            <!-- <img src="../images/colOneDesc1.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
 
         <li class="photo-item ">
           <span class="photo__list-one-2 img">
+            <!-- <img src="../images/colOneDesc2.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
 
         <li class="photo-item ">
           <span class="photo__list-one-3 img">
+            <!-- <img src="../images/colOneDesc3.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
         <li class="photo-item">
           <span class="photo__list-one-4 img">
+            <!-- <img src="../images/colOneDesc4.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
-        <li class="photo-item hidden">
+        <li class="photo-item">
           <span class="photo__list-one-5 img ">
+            <!-- <img src="../images/colOneDesc5.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
-        <li class="photo-item hidden ">
+        <li class="photo-item ">
           <span class="photo__list-one-6 img">
+            <!-- <img src="../images/colOneDesc6.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
@@ -119,12 +125,12 @@
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
-        <li class="photo-item hidden">
+        <li class="photo-item ">
           <span class="photo__list-two-5 img">
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
-        <li class="photo-item hiddenHd">
+        <li class="photo-item ">
           <span class="photo__list-two-6 img">
             <i class="visually-hidden">photo-team</i>
           </span>
@@ -135,33 +141,39 @@
 
         <li class="photo-item hiddenHd">
           <span class="photo__list-three-1 img">
+            <!-- <img src="../images/colOneDesc1.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
 
         <li class="photo-item">
           <span class="photo__list-three-2 img">
+            <!-- <img src="../images/colOneDesc2.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
 
         <li class="photo-item">
           <span class="photo__list-three-3 img">
+            <!-- <img src="../images/colOneDesc3.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
         <li class="photo-item">
           <span class="photo__list-three-4 img">
+            <!-- <img src="../images/colOneDesc4.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
-        <li class="photo-item hidden">
+        <li class="photo-item ">
           <span class="photo__list-three-5 img">
+            <!-- <img src="../images/colOneDesc5.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
-        <li class="photo-item hidden">
+        <li class="photo-item ">
           <span class="photo__list-three-6 img">
+            <!-- <img src="../images/colOneDesc6.png" alt="photo-team"> -->
             <i class="visually-hidden">photo-team</i>
           </span>
         </li>
